# ocaml-teaching

./: README.md
src/: docker.ml  dune
src/dockerfiles/4.08/: Dockerfile
src/dockerfiles/4.09/: Dockerfile
src/dockerfiles/4.10/: Dockerfile
src/dockerfiles/4.11/: Dockerfile
teaching/: README.md  gradebook.db
teaching/ocaml101/: gradebook.db  nbgrader_config.py
teaching/ocaml101/release/assignment1/: stdlib_task.ipynb
teaching/ocaml101/source/.ipynb_checkpoints/: header-checkpoint.ipynb
teaching/ocaml101/source/assignment1/: stdlib_task.ipynb
