(executable
 (name docker)
 (libraries dockerfile))

(rule
 (with-stdout-to
  docker9.output
  (run ./docker.exe "4.09")))

(rule
 (with-stdout-to
  docker10.output
  (run ./docker.exe "4.10")))

(rule
 (with-stdout-to
  docker11.output
  (run ./docker.exe "4.11")))

(rule
 (alias docker)
 (action
  (diff dockerfiles/4.09/Dockerfile docker9.output)))

(rule
 (alias docker)
 (action
  (diff dockerfiles/4.10/Dockerfile docker10.output)))

(rule
 (alias docker)
 (action
  (diff dockerfiles/4.11/Dockerfile docker11.output)))
